<resources>
    <string name="app_name">SATECO Banche</string>

    <string name="action_sync">Synchroniser les données</string>
    <string name="action_information">Information</string>
    <string name="action_settings">Paramètres</string>
    <string name="action_clear">Effacer les données</string>
    <string name="title_clear_data">Effacer les données</string>
    <string name="message_clear_data">Voulez-vous vraiment effacer toutes les données?</string>

    <string name="action_export_data">Exporter des données</string>

    <string name="action_add_construction">Ajouter une nouvelle construction</string>
    <string name="action_add_formwork">Ajouter un nouveau coffrage</string>
    <string name="action_add_chip">Ajouter un nouveau capteur</string>

    <string name="heightlabel">Hauteur</string>
    <string name="heightvalue">0</string>
    <string name="heightunit">cm</string>

    <string name="thicknesslabel">Epaisseur</string>
    <string name="thicknessvalue">0</string>
    <string name="thicknessunit">cm</string>

    <string name="niveaulabel">Niveau</string>
    <string name="niveauvalue">0</string>
    <string name="niveauunit">°</string>

    <string name="aplomblabel">Aplomb</string>
    <string name="aplombvalue">0</string>
    <string name="aplombunit">°</string>

    <string name="pressurelabel">Pression</string>
    <string name="pressurevalue">0</string>
    <string name="pressureunit">T</string>

    <string name="legend_pressure">Pression</string>

    <string name="tabdistance">Capteur de distance</string>
    <string name="tabangle">Inclinomètre</string>
    <string name="tabpressure">Capteur de pression</string>

    <string name="usb_ready">USB prêt.</string>
    <string name="usb_permission_not_granted">Permission USB non accordée.</string>
    <string name="no_usb_connected">Non USB connecté.</string>
    <string name="usb_disconnected">USB déconnecté.</string>
    <string name="usb_device_not_supported">Périphérique USB non pris en charge.</string>

    <string name="found_wifi_network">Réseau wifi trouvé.</string>
    <string name="found_mobile_internet_network">Réseau mobile trouvé.</string>
    <string name="no_wifi_or_3g_enabled">Pas de wifi ou 3G activé.</string>

    <string name="navigation_drawer_open">Ouvrir le tiroir de navigation</string>
    <string name="navigation_drawer_close">Fermer le tiroir de navigation</string>

    <string name="nav_desciption">dfm-engineering.com</string>
    <string name="nav_img_desciption">Image description</string>
    <string name="splash_image_description">Splash image description</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
